<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Nimble Lee Assignment</string>
    <string name="error_generic">Unexpected error</string>

    <!--  Sign In  -->
    <string name="label_email">Email</string>
    <string name="label_login">Log in</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in_forgot">Forgot?</string>

    <!--  Forgot password  -->
    <string name="reset">Reset</string>

    <string name="take_survey">Take Survey</string>
    <string name="start_survey">Start Survey</string>
    <string name="today">Today</string>
    <string name="home_empty_state_text">Survey list is empty</string>
    <string name="success">Success</string>
    <string name="forgot_password_dialog_message">Check you email to reset password.</string>
    <string name="ok">Ok</string>
    <string name="forgot_password_description">Enter your email to receive instructions for resetting your password.</string>

</resources>
